# rental-screening-test-data-generator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
docs/: requirements.md
input/: cases.jsonl
scripts/: generate_case_pdfs.py
src/rental_pdf_generator/: answer_builder.py  cli.py  file_writer.py  generator.py  models.py  template_loader.py
templates/bank_balance_certificate/: standard.html
templates/business_license/: restaurant.html
templates/business_license_application/: restaurant.html
templates/business_opening_notice/: individual.html
templates/business_plan/: corporate_startup.html  individual_startup.html  narrative.html
templates/business_use_pledge/: no_license_required.html
templates/corporate_guarantee_contract/: standard.html
templates/financial_statement/: financial_summary.html  financial_summary_prior.html  multi_period.html
templates/funding_evidence/: standard.html
templates/guarantee_company_application/: standard.html
templates/guarantor_2_identity_document/: drivers_license.html
templates/guarantor_2_income_certificate/: salary_certificate.html
templates/guarantor_2_residence_certificate/: standard.html
templates/guarantor_2_seal_certificate/: standard.html
templates/guarantor_identity_document/: drivers_license.html
templates/guarantor_income_certificate/: salary_certificate.html
templates/guarantor_residence_certificate/: standard.html
tests/: conftest.py  test_answer_builder.py  test_generate_case_pdfs.py  test_template_loader.py
(+27 files in other folders)
